force-app/main/default/objects/ECM_Repository__c/ECM_Repository__c.object-meta.xml
<CustomObject>
    <label>ECM Repository</label>
    <nameField>
        <displayFormat>ECM Rep.{000}</displayFormat>
        <label>ECM Repository Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>