force-app/main/default/objects/ECM_Repository__c/fields/Archival_Date__c.field-meta.xml
<CustomField>
    <fullName>Archival_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Archival Date</label>
    <type>DateTime</type>
</CustomField>