force-app/main/default/objects/ECM_Repository__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ECM Repositories</relationshipLabel>
    <relationshipName>ECM_Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>