force-app/main/default/objects/ECM_Repository__c/fields/Case_Closed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Datetime__c</fullName>
    <formula>Case__r.ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed Datetime</label>
    <type>DateTime</type>
</CustomField>