force-app/main/default/objects/ECM_Repository__c/fields/Customer_Firstname_EN__c.field-meta.xml
<CustomField>
    <fullName>Customer_Firstname_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Firstname EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>