force-app/main/default/objects/ECM_Repository__c/fields/Customer_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lastname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>