force-app/main/default/objects/ECM_Repository__c/fields/Disposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disposal Date</label>
    <type>DateTime</type>
</CustomField>