force-app/main/default/objects/ECM_Repository__c/fields/E_Client_Suitability__c.field-meta.xml
<CustomField>
    <fullName>E_Client_Suitability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup which e-client has this ecm record</description>
    <label>E-Client Suitability</label>
    <referenceTo>E_Client_Suitability__c</referenceTo>
    <relationshipLabel>ECM Repositories</relationshipLabel>
    <relationshipName>ECM_Eclient</relationshipName>
    <type>Lookup</type>
</CustomField>