force-app/main/default/objects/ECM_Repository__c/fields/ECM_App_ID__c.field-meta.xml
<CustomField>
    <fullName>ECM_App_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECM App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>