force-app/main/default/objects/ECM_Repository__c/fields/ECM_MS_Doctype_Key__c.field-meta.xml
<CustomField>
    <fullName>ECM_MS_Doctype_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECM MS Doctype Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>