force-app/main/default/objects/ECM_Repository__c/fields/ECM_Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>ECM_Uploaded_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECM Uploaded By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>