force-app/main/default/objects/ECM_Repository__c/fields/ECM_Uploaded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ECM_Uploaded_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECM Uploaded Date/Time</label>
    <type>DateTime</type>
</CustomField>