force-app/main/default/objects/ECM_Repository__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <description>link to File in ECM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Link</label>
    <type>Url</type>
</CustomField>