force-app/main/default/objects/ECM_Repository__c/fields/Is_ECM_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_ECM_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if ECM is upload or not</description>
    <label>Is ECM Upload</label>
    <type>Checkbox</type>
</CustomField>