force-app/main/default/objects/ECM_Repository__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>