force-app/main/default/objects/ECM_Repository__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repository</label>
    <length>255</length>
    <type>Text</type>
</CustomField>