force-app/main/default/objects/ECM_Repository__c/fields/Retry_Flag__c.field-meta.xml
<CustomField>
    <fullName>Retry_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Flag (Update ClosedCase to ECM)</label>
    <type>Checkbox</type>
</CustomField>