force-app/main/default/objects/ECM_Repository__c/fields/Update_ECM_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_ECM_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Update ECM Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>