force-app/main/default/objects/ECM_Repository__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ECM_Uploaded_By</relationshipName>
    <type>Lookup</type>
</CustomField>